# staticlibtest

./: README.md
ProjectA/app/: build.gradle
ProjectA/app/src/androidTest/java/sec/unitile/projecta/: ExampleInstrumentedTest.java
ProjectA/app/src/main/: AndroidManifest.xml
ProjectA/app/src/main/cpp/: CMakeLists.txt  MinusCalc.cpp  projectA.cpp  projectA.h  sumWrapper.cpp  sumWrapper.h
ProjectA/app/src/main/java/sec/unitile/projecta/: CallNativeFunction.java  MainActivity.java
ProjectA/app/src/main/res/layout/: activity_main.xml
ProjectA/app/src/test/java/sec/unitile/projecta/: ExampleUnitTest.java
ProjectA/gradle/wrapper/: gradle-wrapper.properties
ProjectB/: settings.gradle
ProjectB/app/: build.gradle
ProjectB/app/src/androidTest/java/sec/unitile/projectb/: ExampleInstrumentedTest.java
ProjectB/app/src/main/: AndroidManifest.xml
ProjectB/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ProjectB/app/src/main/java/sec/unitile/projectb/: CallNativeFunction.java  MainActivity.java
ProjectB/app/src/test/java/sec/unitile/projectb/: ExampleUnitTest.java
ProjectB/gradle/wrapper/: gradle-wrapper.properties
ProjectC/: settings.gradle
ProjectC/app/: build.gradle
ProjectC/app/src/androidTest/java/sec/unitile/projectc/: ExampleInstrumentedTest.java
ProjectC/app/src/main/: AndroidManifest.xml
ProjectC/app/src/main/cpp/: CMakeLists.txt  MinusCalc.h  native-lib.cpp
ProjectC/app/src/main/java/sec/unitile/projectc/: MainActivity.java
ProjectC/app/src/test/java/sec/unitile/projectc/: ExampleUnitTest.java
ProjectC/gradle/wrapper/: gradle-wrapper.properties
